# stokes

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  bibliography.bib  generate_mesh.py  mesh.geo  report.qmd
include/: BP_stokes.hpp  base_stokes.hpp  boundary.hpp  common.hpp  inverse_matrix.hpp  navier_stokes.hpp  parameters.hpp  schur_complement.hpp  stabilized_stokes.hpp  stable_stokes.hpp  stokes.hpp
src/: BP_stokes.cpp  boundary.cpp  main.cpp  navier_stokes.cpp  stabilized_stokes.cpp  stable_stokes.cpp  stokes.cpp
